# framework-package

./: .gitignore  README.md  README.md.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python.yml  test.yml
cov.xml/: codecov.yml
framework-package/: README.md  README.md.txt  setup.py
framework-package/framework_package/: core.py.py  framework-package.lnk
framework-package/setup'/: README.md  setup.py
framework-package/setup'/YourPackageName.egg-info/: PKG-INFO  SOURCES.txt
framework-package/tests/: test_core.py
tests/: test_core.py
