[tool.poetry]
name = "python publish package"
version = "0.1.0"
description = "A short description of your project"
authors = ["Jahnavi Gangadi <jahnavigangadi20.gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
